--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "react-pdf",
   "version": "6.0.0-beta.3",
   "description": "Display PDFs in your React app as easily as if they were images.",
-  "main": "dist/umd/entry.js",
+  "main": "dist/cjs/entry.js",
   "module": "dist/esm/entry.js",
   "source": "src/entry.js",
   "scripts": {
-    "build": "yarn build-js-all && yarn copy-styles",
-    "build-js-all": "yarn build-js-esm && yarn build-js-umd",
+    "build": "yarn build-js && yarn copy-styles",
+    "build-js": "yarn build-js-esm && yarn build-js-cjs",
     "build-js-esm": "BABEL_ENV=production-esm babel src -d dist/esm --ignore \"**/*.spec.js,**/*.spec.jsx\"",
-    "build-js-umd": "BABEL_ENV=production-umd babel src -d dist/umd --ignore \"**/*.spec.js,**/*.spec.jsx\"",
+    "build-js-cjs": "BABEL_ENV=production-cjs babel src -d dist/cjs --ignore \"**/*.spec.js,**/*.spec.jsx\"",
     "clean": "rimraf dist",
     "copy-styles": "node ./copy-styles.js",
     "jest": "jest",
