Revert "Remove the need for @babel/runtime"
This reverts commit 6b97384a164ca4e62a1081967dcd66682db2dee5.

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "presets": ["@babel/env", "@babel/react"],
+  "plugins": ["@babel/transform-runtime"],
   "env": {
     "production-esm": {
       "presets": [
@@ -10,7 +11,8 @@
           }
         ],
         "@babel/react"
-      ]
+      ],
+      "plugins": [["@babel/transform-runtime", { "useESModules": true }]]
     }
   }
 }
