--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "^7.0.0",
     "make-cancellable-promise": "^1.0.0",
     "make-event-props": "^1.1.0",
     "merge-class-names": "^1.1.1",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@babel/cli": "^7.15.0",
     "@babel/core": "^7.15.0",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.0",
     "@testing-library/jest-dom": "^5.15.0",
