Replace merge-class-names with clsx

--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.0.0",
+    "clsx": "^1.2.1",
     "make-cancellable-promise": "^1.0.0",
     "make-event-props": "^1.1.0",
-    "merge-class-names": "^1.1.1",
     "merge-refs": "^1.0.0",
     "pdfjs-dist": "2.16.105",
     "prop-types": "^15.6.2",
