--- a/sample/webpack4/package.json
+++ b/sample/webpack4/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "build": "NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=production webpack",
-    "start": "NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=development webpack serve"
+    "dev": "NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=development webpack serve"
   },
   "author": {
     "name": "Wojciech Maj",
