--- a/sample/parcel/package.json
+++ b/sample/parcel/package.json
@@ -7,7 +7,7 @@
     "copy-cmaps": "node ./scripts/copy-cmaps.js",
     "copy-standard-fonts": "node ./scripts/copy-standard-fonts.js",
     "build": "parcel build index.html --public-url ./",
-    "start": "parcel index.html"
+    "dev": "parcel index.html"
   },
   "author": {
     "name": "Wojciech Maj",
