Lint root, not just subdirectories

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean": "rimraf dist",
     "copy-styles": "node ./copy-styles.mjs",
     "jest": "jest",
-    "lint": "eslint sample src test --ext .js,.jsx",
+    "lint": "eslint . --ext .js,.jsx",
     "postinstall": "husky install",
     "prepack": "yarn clean && yarn build",
     "prettier": "prettier --check . --cache",
