--- a/sample/parcel/package.json
+++ b/sample/parcel/package.json
@@ -27,8 +27,7 @@
   },
   "resolutions": {
     "postcss@6.0.1": "^6.0.1",
-    "postcss@7.0.32": "^7.0.32",
-    "semver@7.0.0": "^7.0.0"
+    "postcss@7.0.32": "^7.0.32"
   },
   "dependenciesMeta": {
     "parcel-bundler": {
