--- a/package.json
+++ b/package.json
@@ -58,8 +58,7 @@
     "pretty-quick": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rimraf": "^3.0.0",
-    "webpack": "^5.20.0"
+    "rimraf": "^3.0.0"
   },
   "peerDependencies": {
     "file-loader": "^6.0.0",
