--- a/sample/vite/package.json
+++ b/sample/vite/package.json
@@ -20,7 +20,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2.2.0",
-    "vite": "^3.2.2",
-    "vite-plugin-html": "^3.2.0"
+    "vite": "^3.0.0"
   }
 }
