--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "tiny-warning": "^1.0.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.0.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.0",
