--- a/sample/parcel/package.json
+++ b/sample/parcel/package.json
@@ -23,7 +23,8 @@
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.14.0",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "typescript": "^5.0.4"
   },
   "resolutions": {
     "postcss@6.0.1": "^6.0.1",
