--- a/sample/parcel2/package.json
+++ b/sample/parcel2/package.json
@@ -20,6 +20,9 @@
     "react-pdf": "latest"
   },
   "devDependencies": {
-    "parcel": "^2.0.0"
+    "buffer": "^5.5.0",
+    "parcel": "^2.0.0",
+    "process": "^0.11.10",
+    "typescript": "^5.0.4"
   }
 }
