--- a/sample/webpack4/.babelrc
+++ b/sample/webpack4/.babelrc
@@ -1,11 +1,12 @@
 {
   "presets": [
+    "@babel/preset-typescript",
     [
       "@babel/preset-env",
       {
         "modules": false
       }
     ],
-    "@babel/react"
+    "@babel/preset-react"
   ]
 }
