Convert Webpack 5 config to TypeScript

--- a/sample/webpack5/package.json
+++ b/sample/webpack5/package.json
@@ -22,11 +22,14 @@
     "@babel/preset-env": "^7.21.0",
     "@babel/preset-react": "^7.18.0",
     "@babel/preset-typescript": "^7.21.0",
+    "@types/node": "*",
     "babel-loader": "^9.0.1",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.0.0",
     "html-webpack-plugin": "^5.1.0",
     "style-loader": "^3.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.0",
     "webpack": "^5.76.3",
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.13.1"
