Convert Webpack 4 config to TypeScript

--- a/sample/webpack4/package.json
+++ b/sample/webpack4/package.json
@@ -22,12 +22,16 @@
     "@babel/preset-env": "^7.21.0",
     "@babel/preset-react": "^7.18.0",
     "@babel/preset-typescript": "^7.21.0",
+    "@types/copy-webpack-plugin": "^6.4.0",
+    "@types/node": "*",
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^6.4.0",
     "css-loader": "^5.2.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.5.0",
     "style-loader": "^2.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^4.13.1"
