Convert utilities to TypeScript

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build-js-esm": "tsc --project tsconfig.build.json --outDir dist/esm --module esnext",
     "build-js-cjs": "tsc --project tsconfig.build.json --outDir dist/cjs --module commonjs",
     "clean": "rimraf dist",
-    "copy-styles": "node ./copy-styles.mjs",
+    "copy-styles": "node --loader ts-node/esm ./copy-styles.ts",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "postinstall": "husky install",
     "prepack": "yarn clean && yarn build",
@@ -48,6 +48,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.0",
+    "@types/node": "*",
     "eslint": "^8.26.0",
     "eslint-config-wojtekmaj": "^0.8.4",
     "husky": "^8.0.0",
@@ -57,6 +58,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^3.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.0",
     "vitest": "^0.30.1",
     "vitest-canvas-mock": "^0.2.2"
