--- a/sample/create-react-app-5/package.json
+++ b/sample/create-react-app-5/package.json
@@ -6,9 +6,9 @@
   "main": "src/index.tsx",
   "scripts": {
     "build": "react-scripts build",
-    "copy-cmaps": "node ./scripts/copy-cmaps.mjs",
-    "copy-standard-fonts": "node ./scripts/copy-standard-fonts.mjs",
-    "copy-worker": "node ./scripts/copy-worker.mjs",
+    "copy-cmaps": "node --loader ts-node/esm ./scripts/copy-cmaps.ts",
+    "copy-standard-fonts": "node --loader ts-node/esm ./scripts/copy-standard-fonts.ts",
+    "copy-worker": "node --loader ts-node/esm ./scripts/copy-worker.ts",
     "dev": "react-scripts start",
     "eject": "react-scripts eject",
     "test": "react-scripts test"
@@ -25,6 +25,8 @@
     "react-scripts": "^5.0.0"
   },
   "devDependencies": {
+    "@types/node": "*",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.0"
   },
   "resolutions": {
