--- a/sample/parcel2/package.json
+++ b/sample/parcel2/package.json
@@ -4,8 +4,8 @@
   "description": "A sample page for React-PDF.",
   "private": true,
   "scripts": {
-    "copy-cmaps": "node ./scripts/copy-cmaps.mjs",
-    "copy-standard-fonts": "node ./scripts/copy-standard-fonts.mjs",
+    "copy-cmaps": "node --loader ts-node/esm ./scripts/copy-cmaps.ts",
+    "copy-standard-fonts": "node --loader ts-node/esm ./scripts/copy-standard-fonts.ts",
     "build": "parcel build index.html --public-url ./",
     "dev": "parcel index.html"
   },
@@ -20,9 +20,11 @@
     "react-pdf": "latest"
   },
   "devDependencies": {
+    "@types/node": "*",
     "buffer": "^5.5.0",
     "parcel": "^2.0.0",
     "process": "^0.11.10",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.0"
   }
 }
