--- a/sample/vite4/package.json
+++ b/sample/vite4/package.json
@@ -6,8 +6,6 @@
   "type": "module",
   "scripts": {
     "build": "vite build",
-    "copy-cmaps": "node --loader ts-node/esm ./scripts/copy-cmaps.ts",
-    "copy-standard-fonts": "node --loader ts-node/esm ./scripts/copy-standard-fonts.ts",
     "dev": "vite",
     "preview": "vite preview"
   },
@@ -23,6 +21,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^3.0.0",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-static-copy": "^0.17.0"
   }
 }
