Replace custom script in copy-styles script with cpy

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build-js-esm": "tsc --project tsconfig.build.json --outDir dist/esm --module esnext",
     "build-js-cjs": "tsc --project tsconfig.build.json --outDir dist/cjs --module commonjs",
     "clean": "rimraf dist",
-    "copy-styles": "node --loader ts-node/esm ./copy-styles.ts",
+    "copy-styles": "cpy 'src/**/*.css' dist/esm && cpy 'src/**/*.css' dist/cjs",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "postinstall": "husky install",
     "prepack": "yarn clean && yarn build",
@@ -51,6 +51,7 @@
     "@testing-library/user-event": "^14.4.0",
     "@types/node": "*",
     "@types/react": "*",
+    "cpy-cli": "^5.0.0",
     "eslint": "^8.26.0",
     "eslint-config-wojtekmaj": "^0.9.0",
     "husky": "^8.0.0",
@@ -60,7 +61,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^3.0.0",
-    "ts-node": "^10.9.1",
     "typescript": "^5.0.0",
     "vitest": "^0.30.1",
     "vitest-canvas-mock": "^0.2.2"
