--- a/sample/vite3/package.json
+++ b/sample/vite3/package.json
@@ -20,6 +20,7 @@
     "react-pdf": "latest"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.20.0",
     "@vitejs/plugin-react": "^2.2.0",
     "typescript": "^5.0.0",
     "vite": "^3.0.0",
