--- a/sample/webpack5/tsconfig.json
+++ b/sample/webpack5/tsconfig.json
@@ -3,7 +3,7 @@
     "declaration": true,
     "esModuleInterop": true,
     "isolatedModules": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "module": "esnext",
     "moduleResolution": "node",
     "noUncheckedIndexedAccess": true,
