Fix watch command

--- a/packages/react-pdf/package.json
+++ b/packages/react-pdf/package.json
@@ -42,7 +42,7 @@
     "test": "yarn lint && yarn tsc && yarn prettier && yarn unit",
     "tsc": "tsc --noEmit",
     "unit": "vitest",
-    "watch": "yarn build-esm --watch & yarn build-cjs --watch & nodemon --watch src --ext css --exec \"yarn copy-styles\""
+    "watch": "yarn build-js-esm --watch & yarn build-js-cjs --watch & nodemon --watch src --ext css --exec \"yarn copy-styles\""
   },
   "keywords": [
     "pdf",
