--- a/sample/vite4/tsconfig.json
+++ b/sample/vite4/tsconfig.json
@@ -5,7 +5,7 @@
     "isolatedModules": true,
     "jsx": "react-jsx",
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "noUncheckedIndexedAccess": true,
     "outDir": "dist",
     "strict": true,
