--- a/packages/react-pdf/tsconfig.json
+++ b/packages/react-pdf/tsconfig.json
@@ -4,11 +4,13 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "jsx": "react",
+    "module": "esnext",
     "moduleResolution": "node",
     "noUncheckedIndexedAccess": true,
     "outDir": "dist",
     "strict": true,
-    "target": "es2015"
+    "target": "es2015",
+    "verbatimModuleSyntax": true
   },
   "include": ["src"]
 }
