--- a/sample/vite4/tsconfig.json
+++ b/sample/vite4/tsconfig.json
@@ -9,6 +9,7 @@
     "noUncheckedIndexedAccess": true,
     "outDir": "dist",
     "strict": true,
-    "target": "es2015"
+    "target": "es2015",
+    "verbatimModuleSyntax": true
   }
 }
