--- a/sample/webpack5/tsconfig.json
+++ b/sample/webpack5/tsconfig.json
@@ -9,11 +9,13 @@
     "noUncheckedIndexedAccess": true,
     "outDir": "dist",
     "strict": true,
-    "target": "es2015"
+    "target": "es2015",
+    "verbatimModuleSyntax": true
   },
   "ts-node": {
     "compilerOptions": {
-      "module": "commonjs"
+      "module": "commonjs",
+      "verbatimModuleSyntax": false
     }
   }
 }
