Fix Babel config in Webpack 5 sample

--- a/sample/webpack5/.babelrc
+++ b/sample/webpack5/.babelrc
@@ -7,6 +7,11 @@
         "modules": false
       }
     ],
-    "@babel/preset-react"
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ]
   ]
 }
