Use ResizeObserver, not CSS max-width, to resize pages

--- a/sample/parcel2/package.json
+++ b/sample/parcel2/package.json
@@ -17,6 +17,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@wojtekmaj/react-hooks": "^1.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "latest"
