--- a/sample/create-react-app-5/package.json
+++ b/sample/create-react-app-5/package.json
@@ -21,6 +21,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@wojtekmaj/react-hooks": "^1.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "latest",
