--- a/sample/create-react-app-5/package.json
+++ b/sample/create-react-app-5/package.json
@@ -33,6 +33,7 @@
     "typescript": "^5.0.0"
   },
   "resolutions": {
+    "eslint-plugin-import@^2.25.3": "npm:eslint-plugin-i@^2.28.0",
     "mini-css-extract-plugin": "~2.4.0"
   },
   "browserslist": {
