--- a/packages/react-pdf/tsconfig.json
+++ b/packages/react-pdf/tsconfig.json
@@ -6,11 +6,12 @@
     "jsx": "react",
     "module": "esnext",
     "moduleResolution": "node",
+    "noEmit": true,
     "noUncheckedIndexedAccess": true,
     "outDir": "dist",
     "strict": true,
     "target": "es2015",
     "verbatimModuleSyntax": true
   },
-  "include": ["src"]
+  "exclude": ["dist"]
 }
