--- a/sample/create-react-app-5/tsconfig.json
+++ b/sample/create-react-app-5/tsconfig.json
@@ -9,6 +9,7 @@
     "noEmit": true,
     "noUncheckedIndexedAccess": true,
     "outDir": "dist",
+    "skipLibCheck": true,
     "strict": true,
     "target": "es2015",
     "verbatimModuleSyntax": true
