--- a/packages/react-pdf/package.json
+++ b/packages/react-pdf/package.json
@@ -62,7 +62,7 @@
     "pdfjs-dist": "3.11.174",
     "prop-types": "^15.6.2",
     "tiny-invariant": "^1.0.0",
-    "tiny-warning": "^1.0.0"
+    "warning": "^4.0.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.0.0",
@@ -70,6 +70,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/node": "*",
     "@types/react": "*",
+    "@types/warning": "^3.0.0",
     "cpy-cli": "^5.0.0",
     "eslint": "^8.26.0",
     "eslint-config-wojtekmaj": "^0.9.0",
