--- a/packages/react-pdf/package.json
+++ b/packages/react-pdf/package.json
@@ -71,6 +71,7 @@
     "@types/node": "*",
     "@types/react": "*",
     "@types/warning": "^3.0.0",
+    "canvas": "^2.11.2",
     "cpy-cli": "^5.0.0",
     "eslint": "^8.26.0",
     "eslint-config-wojtekmaj": "^0.9.0",
@@ -81,8 +82,7 @@
     "react-dom": "^18.2.0",
     "rimraf": "^3.0.0",
     "typescript": "^5.3.2",
-    "vitest": "^1.0.2",
-    "vitest-canvas-mock": "^0.2.2"
+    "vitest": "^1.0.2"
   },
   "peerDependencies": {
     "@types/react": "^16.8.0 || ^17.0.0 || ^18.0.0",
