Normalize repository.url

--- a/packages/react-pdf/package.json
+++ b/packages/react-pdf/package.json
@@ -104,7 +104,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/wojtekmaj/react-pdf.git",
+    "url": "git+https://github.com/wojtekmaj/react-pdf.git",
     "directory": "packages/react-pdf"
   },
   "funding": "https://github.com/wojtekmaj/react-pdf?sponsor=1"
