--- a/packages/react-pdf/package.json
+++ b/packages/react-pdf/package.json
@@ -56,6 +56,7 @@
   "license": "MIT",
   "dependencies": {
     "clsx": "^2.0.0",
+    "dequal": "^2.0.3",
     "make-cancellable-promise": "^1.3.1",
     "make-event-props": "^1.6.0",
     "merge-refs": "^1.2.1",
