--- a/sample/parcel2/package.json
+++ b/sample/parcel2/package.json
@@ -27,7 +27,7 @@
     "buffer": "^5.5.0",
     "parcel": "^2.0.0",
     "process": "^0.11.10",
-    "ts-node": "^10.9.1",
+    "tsimp": "^2.0.11",
     "typescript": "^5.0.0"
   }
 }
