--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "prettier": "^3.2.0"
   },
   "resolutions": {
-    "eslint-plugin-import": "npm:eslint-plugin-i@^2.28.0"
+    "eslint-plugin-import": "npm:eslint-plugin-i@^2.28.0",
+    "pdfjs-dist": "patch:pdfjs-dist@npm:4.3.136#.yarn/patches/pdfjs-dist-npm-4.3.136-35a0e70ced.patch"
   },
   "packageManager": "yarn@4.1.1"
 }
