--- a/sample/webpack5/tsconfig.json
+++ b/sample/webpack5/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "esModuleInterop": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
     "module": "preserve",
